# tdd-haskell-part1

./: .gitignore  CHANGELOG.md  LICENSE  README.md  myhspecproj.cabal
app/: Main.hs
src/: MyLib.hs
test/: MyLibTest.hs
