cabal-version:      2.4
name:               myhspecproj
version:            0.1.0.0
synopsis:           does_stuff

homepage:           http://example.com

license:            BSD-3-Clause
license-file:       LICENSE
author:             computertuts
maintainer:         computertuts@example.com

extra-source-files: CHANGELOG.md

library myhspecproj-lib
    exposed-modules:  MyLib


    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable myhspecproj
    main-is:          Main.hs


    build-depends:
        base ^>=4.16.4.0,
        myhspecproj-lib

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite myhspecproj-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
                    , myhspecproj-lib 
